[package]
name = "xray"
version = "0.1.1"
authors = ["Tony Finn <crates@tonyfinn.com>"]
description = "Screenshot testing for Rust games"
readme = "README.md"
keywords = ["screenshot", "test"]
categories = ["development-tools::testing", "games"]
license = "Apache-2.0"
repository = "https://gitlab.com/tonyfinn/xray"

[features]
default = ["gl"]
opengl = ["gl"]

[dependencies]
image = "0.19.0"
gl = { version = "0.10.0", optional = true }

[badges]
gitlab = { repository = "tonyfinn/xray", branch = "master" }